Scoping enabled, visualization WIP

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <script type="text/python">
             import main
             main.main()
-            main.visualize()
         </script>
 
         <input type="file" id="upload_file" />
@@ -21,6 +20,8 @@
         <button id="enable_fact_based">Disable Fact-based</button>
         <button id="enable_forward_pass">Disable Forward Pass</button>
         <button id="enable_loop">Disable Loop</button>
+
+        <button id="visualize" disabled>Visualize</button>
 
         <a id="download_file" href="#" download class="anchor-as-button">Download</a>
         <textarea id="sas_content" rows="20" cols="60" autocomplete="off"></textarea>
