Display scoped sas task

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 >Download</a
             >
         </div>
+        <p style="margin-bottom: 0;">Scoped SAS file</p>
         <textarea
             id="sas_content"
             rows="10"
