--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
                 >Download</a
             >
         </div>
-        <p style="margin-bottom: 0;">Scoped SAS file</p>
+        <p style="margin-bottom: 0">Scoped SAS file</p>
         <textarea
             id="sas_content"
             rows="10"
             cols="60"
             autocomplete="off"
         ></textarea>
+
+        <div id="nodeDetails"></div>
 
         <div id="container"></div>
     </body>
