--- a/index.html
+++ b/index.html
@@ -53,15 +53,16 @@
                 >Download</a
             >
         </div>
-        <p style="margin-bottom: 0">Scoped SAS file</p>
+
         <textarea
             id="sas_content"
             rows="10"
             cols="60"
             autocomplete="off"
+            style="display: none"
         ></textarea>
 
-        <div id="nodeDetails"></div>
+        <div id="nodeDetails" style="width: 500"></div>
 
         <div id="container"></div>
     </body>
